# interactive-book-chat

./: .gitignore  .replit  2.0  Product Requirements Document.docx  app.py  character_analysis.json  migrate.py  migrations.py  models.py  pyproject.toml  requirements.txt  reset_db.py  reset_migrations.bat  reset_migrations.sh  routes.py  utils.py
migrations/versions/: 54f43ce0db30_initial_migration.py  61c671c14f56_initial_migration.py  8cd1a81b164e_initial_migration.py
static/js/: chat.js  image_upload.js  libraries.js  pdf.min.js  pdf.worker.min.js  transitions.js  upload.js
templates/: base.html  base_content.html  chat.html  favorites.html  image_test.html  index.html  libraries.html  library_detail.html  login.html  register.html
utils/: __init__.py  ai_handler.py  character_analysis.py  file_processing.py  image_helpers.py  image_optimizer.py  models.py  personality_analyzer.py  prompts.py  recommendations.py  template_helpers.py
