[project]
name = "repl-nix-fastapi-platform"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.54.3",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "pypdf2>=3.0.1",
    "werkzeug",
    "textblob>=0.18.0.post0",
    "nltk>=3.9.1",
]
